# SpaceWarp

./: .gitattributes  .gitignore  Directory.Build.props  Directory.Build.targets  LICENSE  ModTemplateGenerator.py  NuGet.config  Package.nuspec  README.md  SECURITY.md  SpaceWarp.nuspec  SpaceWarp.sln  SpaceWarp1.0_ConversionDoc.md  TemplateGenV2.py  build.bat  build.ps1  build.sh  build_debug.ps1  build_release.ps1  builder.py  example_mod_info.json  ksp2_mod_loader_patcher.sln  out.json  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
Bundles/: swconsoleui.bundle
ChainloaderPatcher/: ChainloaderPatch.cs  ChainloaderPatcher.csproj  Patcher.cs
Doorstop/: doorstop_config.ini
ExampleMod/: Class1.cs  ExampleMod.cs  ExampleMod.csproj  modInfo.json  swinfo.json
SpaceWarp/: App.config  AssetHelpers.cs  BepInExEntrypoint.cs  Entrypoint.cs  InternalExtensions.cs  PathHelpers.cs  SpaceWarp.csproj  SpaceWarpManager.cs  SpaceWarpPlugin.cs  StartupManager.cs  packages.config  swinfo.json
SpaceWarp.Core/: AssemblyInfo.cs  SpaceWarp.Core.csproj  SpaceWarpPlugin.cs
SpaceWarp.Game/: AssemblyInfo.cs  SpaceWarp.Game.csproj
SpaceWarp.Messaging/: SpaceWarp.Messaging.csproj
SpaceWarp.Sound/: SpaceWarp.Sound.csproj
SpaceWarp.UI/: SpaceWarp.UI.csproj
SpaceWarp.VersionChecking/: SpaceWarp.VersionChecking.csproj
SpaceWarpBuildTemplate/: swinfo.json
SpaceWarpInstaller/: Download.cs  Installer.cs  ModLoader.cs  Program.cs  Versions.cs  main.cpp  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+555 files in other folders)
